esp32good/build/log/idf_py_stdout_output_12936
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\Windows\SYSTEM32\cmd.exe /C "cd /D E:\project\Esp32Good\esp32good\build\bootloader\esp-idf\esptool_py && C:\Users\Administrator\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/Administrator/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 E:/project/Esp32Good/esp32good/build/bootloader/bootloader.bin"
Bootloader binary size 0x56a0 bytes. 0x960 bytes (10%) free.
[2/9] No install step for 'bootloader'
[3/9] Completed 'bootloader'
[4/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/lv_port/lv_port_indev.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/lv_port/lv_port_indev.c.obj 
ccache C:\Users\Administrator\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DLV_CONF_INCLUDE_SIMPLE -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/project/Esp32Good/esp32good/build/config -IE:/project/Esp32Good/esp32good/main -IE:/project/Esp32Good/esp32good/main/lv_port -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/config/riscv/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c5/. -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c5/private_include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/. -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/esp32c5/register -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/hal/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/esp32c5/include/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/port/include/riscv -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/riscv/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/spi_flash/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_pm/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_driver_i2c/include -IE:/project/Esp32Good/esp32good/managed_components/lvgl__lvgl -IE:/project/Esp32Good/esp32good/managed_components/lvgl__lvgl/src -IE:/project/Esp32Good/esp32good/managed_components -IE:/project/Esp32Good/esp32good/managed_components/lvgl__lvgl/examples -IE:/project/Esp32Good/esp32good/managed_components/lvgl__lvgl/demos -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_timer/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=E:/project/Esp32Good/esp32good=. -fmacro-prefix-map=C:/Users/Administrator/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/lv_port/lv_port_indev.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\lv_port\lv_port_indev.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/lv_port/lv_port_indev.c.obj -c E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c: In function 'lv_port_indev_init':
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:84:5: error: implicit declaration of function 'mouse_init'; did you mean 'touch_init'? [-Wimplicit-function-declaration]
   84 |     mouse_init();
      |     ^~~~~~~~~~
      |     touch_init
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:89:39: error: 'mouse_read' undeclared (first use in this function)
   89 |     lv_indev_set_read_cb(indev_mouse, mouse_read);
      |                                       ^~~~~~~~~~
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:89:39: note: each undeclared identifier is reported only once for each function it appears in
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:101:5: error: implicit declaration of function 'keypad_init'; did you mean 'touchpad_init'? [-Wimplicit-function-declaration]
  101 |     keypad_init();
      |     ^~~~~~~~~~~
      |     touchpad_init
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:106:40: error: 'keypad_read' undeclared (first use in this function); did you mean 'touchpad_read'?
  106 |     lv_indev_set_read_cb(indev_keypad, keypad_read);
      |                                        ^~~~~~~~~~~
      |                                        touchpad_read
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:118:5: error: implicit declaration of function 'encoder_init' [-Wimplicit-function-declaration]
  118 |     encoder_init();
      |     ^~~~~~~~~~~~
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:123:41: error: 'encoder_read' undeclared (first use in this function); did you mean 'encoder_state'?
  123 |     lv_indev_set_read_cb(indev_encoder, encoder_read);
      |                                         ^~~~~~~~~~~~
      |                                         encoder_state
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:135:5: error: implicit declaration of function 'button_init' [-Wimplicit-function-declaration]
  135 |     button_init();
      |     ^~~~~~~~~~~
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:140:40: error: 'button_read' undeclared (first use in this function); did you mean 'lv_button_create'?
  140 |     lv_indev_set_read_cb(indev_button, button_read);
      |                                        ^~~~~~~~~~~
      |                                        lv_button_create
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c: At top level:
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:43:25: warning: 'encoder_state' defined but not used [-Wunused-variable]
   43 | static lv_indev_state_t encoder_state;
      |                         ^~~~~~~~~~~~~
E:/project/Esp32Good/esp32good/main/lv_port/lv_port_indev.c:42:16: warning: 'encoder_diff' defined but not used [-Wunused-variable]
   42 | static int32_t encoder_diff;
      |                ^~~~~~~~~~~~
ninja: build stopped: subcommand failed.
